--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.1",
     "szamlazz.js": "./szamlazz"
