--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/jssc-eu/tito-szamlazzhu#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "isomorphic-unfetch": "^3.0.0",
     "nodemon": "^2.0.1",
+    "numeral": "^2.0.6",
     "restify": "^8.5.0",
     "restify-errors": "^8.0.1",
     "szamlazz.js": "./szamlazz"
