--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "form-data": "^3.0.0",
     "isomorphic-unfetch": "^3.0.0",
+    "mailgun-js": "^0.22.0",
     "nodemon": "^2.0.1",
     "numeral": "^2.0.6",
     "restify": "^8.5.0",
