--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "numeral": "^2.0.6",
     "restify": "^8.5.0",
     "restify-errors": "^8.0.1",
+    "round-to": "^4.0.0",
     "szamlazz.js": "./szamlazz"
   }
 }
