--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "form-data": "^3.0.0",
     "isomorphic-unfetch": "^3.0.0",
+    "jest": "^24.9.0",
     "mailgun-js": "^0.22.0",
     "nodemon": "^2.0.1",
     "numeral": "^2.0.6",
