--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
-SZAMLAZZ_TOKEN=__REDACTED__
-APP_TOKEN=__REDACTED__
-TITO_TOKEN=__REDACTED__
+TEST_MODE=true
+APP_TOKEN=
+
+SZAMLAZZ_TOKEN=
+
+TITO_API_TOKEN=
+TITO_TOKEN_JS=
+TITO_TOKEN_RF=
+
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
