--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
+# don't send to szamlazz.hu, just output the data scrtucture / send it via email
 TEST_MODE=true
+
+# token for the app to validate requests
 APP_TOKEN=
 
+# "Szamla Agent" API token from szamlazz.hu
 SZAMLAZZ_TOKEN=
 
+# Tito API key
 TITO_API_TOKEN=
+
+# Tito webhook signature validator keys
 TITO_TOKEN_JS=
 TITO_TOKEN_RF=
 
+# Mailgun stuff to send emails
 MAILGUN_API_KEY=
 MAILGUN_DOMAIN=
