--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest",
-    "dev": "npx nodemon index.js",
-    "start": "node index.js"
+    "lint": "eslint --ext ts src",
+    "test": "jest src",
+    "build": "rm -rf ./build && tsc",
+    "coverage": "jest --coverage",
+    "dev": "npx nodemon dist/index.js",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,16 +23,34 @@
   },
   "homepage": "https://github.com/jssc-eu/tito-szamlazzhu#readme",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "form-data": "^3.0.0",
-    "jest": "^24.9.0",
     "mailgun-js": "^0.22.0",
-    "nodemon": "^2.0.1",
     "restify": "^8.5.0",
     "restify-errors": "^8.0.1",
     "round-to": "^4.0.0",
-    "szamlazz.js": "./szamlazz",
+    "szamlazz.js": "^4.1.0",
     "yaml": "^1.7.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.8",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "eslint": "^7.11.0",
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.1",
+    "ts-jest": "^26.4.1",
+    "typescript": "^4.0.3"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    },
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/dist/"
+    ]
   }
 }
