--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     },
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/",
-      "<rootDir>/dist/"
+      "<rootDir>/dist/",
+      "<rootDir>/szamlazz/"
     ]
   }
 }
