--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "typescript": "^4.0.3"
   },
   "jest": {
-    "testMatch": ["<rootDir>/src/**/*.test.js", "<rootDir>/src/**/*.test.ts"],
+    "testMatch": [
+      "<rootDir>/src/**/*.test.js",
+      "<rootDir>/src/**/*.test.ts"
+    ],
     "transform": {
       "^.+\\.ts?$": "ts-jest"
     },
