--- a/events-config.yaml
+++ b/events-config.yaml
@@ -49,9 +49,15 @@ events:
     dates:
       - ticket-name-contains: "*"
         date: "September 24-25, 2020"
+      - ticket-name-contains: "workshop"
+        date: "September 23, 2020"        
     catering:
+      - ticket-name-contains: "workshop"
+        net-price: 20
+      - ticket-name-contains: "online"
+        net-price: 0
       - ticket-name-contains: "*"
-        net-price: 40
+        net-price: 40        
     invoice:
       id-prefix: "WIPAO"
       logo-image: "JSCBP-szamlazzhu.png"
