--- a/events-config.yaml
+++ b/events-config.yaml
@@ -9,6 +9,13 @@ events:
         date: "April 8, 2020"
       - ticket-name-contains: "*"
         date: "April 6-7, 2020"
+    catering:
+      - ticket-name-contains: "Diversity"
+        net-price: 94.48
+      - ticket-name-contains: "Workshop"
+        net-price: 23.62
+      - ticket-name-contains: "*"
+        net-price: 47.24
     invoice:
       id-prefix: "RF"
       logo-image: "RF-szamlazzhu.png"
@@ -16,7 +23,7 @@ events:
         The invoice includes mediated services.
         Paid in full.
         This document was issued electronically and is therefore valid without signature.
-      e-invoice: true  
+      e-invoice: true
     email:
       replyToAddress: "hello@reinforceconf.com"
       subject: "Your invoice for Reinforce Conference 2020"
@@ -31,17 +38,46 @@ events:
 
         The Reinforce conference team
 
-    catering:
-      - ticket-name-contains: "Diversity"
-        net-price: 94.48
-      - ticket-name-contains: "Workshop"
-        net-price: 23.62
-      - ticket-name-contains: "*"
-        net-price: 47.24
     bank:
       name: 'Raiffeisen Bank, SWIFT: UBRTHUHB'
       accountNumber: 'HU73-1201-0659-0160-2199-0040-0002'
     tito-token-env: TITO_TOKEN_RF
+
+
+  jsconf-budapest-2021:
+    label: "JSConf Budapest 2021"
+    dates:
+      - ticket-name-contains: "*"
+        date: "September 23-24, 2021"
+    catering:
+      - ticket-name-contains: "*"
+        net-price: 98
+    invoice:
+      id-prefix: "JSCBP"
+      logo-image: "JSCBP-szamlazzhu.png"
+      comment: |
+        The invoice includes mediated services.
+        Paid in full.
+        This document was issued electronically and is therefore valid without signature.
+      e-invoice: true
+    email:
+      replyToAddress: "team@jsconfbp.com"
+      subject: "Your invoice for JSConf Budapest 2021"
+      message: |
+        Dear Attendee!
+
+        Thank you for purchasing tickets for JSConf Budapest 2021.
+
+        Please find attached our official invoice for the conference.
+        In case you have an issue with the invoice, or you have a general question
+        regarding the conference please write to: team@jsconfbp.com
+
+        The JSConf Budapest team
+
+    bank:
+      name: "Raiffeisen Bank, SWIFT: UBRTHUHB"
+      accountNumber: "HU18-1201-0659-0160-2199-0020-0008"
+    tito-token-env: TITO_TOKEN_JS
 
 
   integration-test-event-2020:
@@ -50,14 +86,14 @@ events:
       - ticket-name-contains: "*"
         date: "September 24-25, 2020"
       - ticket-name-contains: "workshop"
-        date: "September 23, 2020"        
+        date: "September 23, 2020"
     catering:
       - ticket-name-contains: "workshop"
         net-price: 20
       - ticket-name-contains: "online"
         net-price: 0
       - ticket-name-contains: "*"
-        net-price: 40        
+        net-price: 40
     invoice:
       id-prefix: "WIPAO"
       logo-image: "JSCBP-szamlazzhu.png"
