--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # don't send to szamlazz.hu, just output the data scrtucture / send it via email
-TEST_MODE=true
+NODE_ENV=development
 
 # token for the app to validate requests
-APP_TOKEN=
+TITO_WEBHOOK_TOKEN=
 
 # "Szamla Agent" API token from szamlazz.hu
 SZAMLAZZ_TOKEN=
@@ -17,3 +17,8 @@ TITO_TOKEN_RF=
 # Mailgun stuff to send emails
 MAILGUN_API_KEY=
 MAILGUN_DOMAIN=
+MAILGUN_PUBLIC_KEY=
+MAILGUN_SMTP_LOGIN=
+MAILGUN_SMTP_PASSWORD=
+MAILGUN_SMTP_PORT=587
+MAILGUN_SMTP_SERVER=smtp.mailgun.org
