--- a/events-config.yaml
+++ b/events-config.yaml
@@ -1,6 +1,42 @@
 ---
 events:
 
+  reinforce2021:
+    label: "Reinforce AI Conference 2021"
+    dates:
+      - ticket-name-contains: "*"
+        date: "March 3–5, 2021"
+    catering:
+      - ticket-name-contains: "*"
+        net-price: 0
+    invoice:
+      id-prefix: "RF"
+      logo-image: "RF-szamlazzhu.png"
+      comment: |
+        The invoice includes mediated services.
+        Paid in full.
+        This document was issued electronically and is therefore valid without signature.
+      e-invoice: true
+    email:
+      replyToAddress: "hello@reinforceconf.com"
+      subject: "Your invoice for Reinforce AI Conference 2021"
+      message: |
+        Dear Attendee!
+
+        Thank you for taking part in Reinforce AI Conference 2021.
+
+        Please find attached our official invoice for the Reinforce AI conference.
+        In case you have an issue with the invoice please reply to this e-mail.
+        In case you have a general question regarding the conference please write to: hello@reinforceconf.com
+
+        The Reinforce conference team
+
+    bank:
+      name: 'Raiffeisen Bank, SWIFT: UBRTHUHB'
+      accountNumber: 'HU73-1201-0659-0160-2199-0040-0002'
+    tito-signature-validator-env: TITO_TOKEN_RF
+
+
   reinforce2020:
     label: 'Reinforce Conference 2020'
     date: 'April 6-7, 2020'
