--- a/events-config.yaml
+++ b/events-config.yaml
@@ -34,24 +34,17 @@ events:
     bank:
       name: 'Raiffeisen Bank, SWIFT: UBRTHUHB'
       accountNumber: 'HU73-1201-0659-0160-2199-0040-0002'
-    tito-signature-validator-env: TITO_TOKEN_RF
+    tito-signature-validator-env: TITO_TOKEN_RF_2021
 
 
-  reinforce2020:
-    label: 'Reinforce Conference 2020'
-    date: 'April 6-7, 2020'
+  reinforce2021online:
+    label: "Reinforce AI Conference 2021"
     dates:
-      - ticket-name-contains: "Workshop"
-        date: "April 8, 2020"
       - ticket-name-contains: "*"
-        date: "April 6-7, 2020"
+        date: "March 3–5, 2021"
     catering:
-      - ticket-name-contains: "Diversity"
-        net-price: 94.48
-      - ticket-name-contains: "Workshop"
-        net-price: 23.62
       - ticket-name-contains: "*"
-        net-price: 47.24
+        net-price: 0
     invoice:
       id-prefix: "RF"
       logo-image: "RF-szamlazzhu.png"
@@ -62,11 +55,11 @@ events:
       e-invoice: true
     email:
       replyToAddress: "hello@reinforceconf.com"
-      subject: "Your invoice for Reinforce Conference 2020"
+      subject: "Your invoice for Reinforce AI Conference 2021"
       message: |
         Dear Attendee!
 
-        Thank you for taking part in Reinforce AI Conference 2020.
+        Thank you for taking part in Reinforce AI Conference 2021.
 
         Please find attached our official invoice for the Reinforce AI conference.
         In case you have an issue with the invoice please reply to this e-mail.
