--- a/events-config.yaml
+++ b/events-config.yaml
@@ -6,6 +6,10 @@ events:
     dates:
       - ticket-name-contains: "*"
         date: "March 3–5, 2021"
+      - ticket-name-contains: "ML/DL"
+        date: "December 2 & 9, 2020"
+      - ticket-name-contains: "MLflow"
+        date: "November 23 & 24, 2020"        
     catering:
       - ticket-name-contains: "*"
         net-price: 0
